After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729894 - flacdec: Can't play variable block size FLAC files
flacdec: Can't play variable block size FLAC files
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other Linux
: Normal normal
: 1.2.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-05-09 21:23 UTC by michal.zajac+gnomebugzilla
Modified: 2014-05-10 13:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
diff (1.10 KB, patch)
2014-05-09 21:38 UTC, Sebastian Dröge (slomo)
needs-work Details | Review

Description michal.zajac+gnomebugzilla 2014-05-09 21:23:04 UTC
Here is a sample file I was not able to play using gst-play-1.0

http://quintasan.pl/hanashirube.flac
Comment 1 Sebastian Dröge (slomo) 2014-05-09 21:38:10 UTC
Created attachment 276264 [details] [review]
diff

This makes the file play, but it seems a bit suspicious. Basically this file is invalid according to the last version of the flac spec I read, but OTOH "flac -t" or "flac -a" do no complain about it at all and every other software I tested played it just fine.
Comment 2 Sebastian Dröge (slomo) 2014-05-09 21:41:35 UTC
Will check tomorrow
Comment 3 Sebastian Dröge (slomo) 2014-05-10 07:32:25 UTC
Only the flacdec change was actually necessary. The other one gives a warning but does not break anything, however this warning indicates that this file is not according to the FLAC spec. It seems like the blocking strategy here changes for every block, while the spec says: The "blocking strategy" bit must be the same throughout the entire stream.

libflac also ignores this, and just printing the warning seems useful.


commit f5b2b6e69653f02a8c0ea6a6be70da2657a1debf
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Sat May 10 09:14:33 2014 +0200

    flacdec: Add support for variable block size files and remove dead code
    
    This dead code wasn't used since the 1.0 port and would need to
    be modified heavily for variable block size support.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=729894